--- a/dwh.cfg
+++ b/dwh.cfg
@@ -6,7 +6,7 @@ DB_PASSWORD=Passw0rd
 DB_PORT=5439
 
 [IAM_ROLE]
-ARN='arn:aws:iam::371251151383:role/dwhRole'
+ARN=arn:aws:iam::371251151383:role/dwhRole
 
 [S3]
 LOG_DATA=s3://udacity-dend/log_data
